--- a/css/estilos.css
+++ b/css/estilos.css
@@ -112,7 +112,7 @@ body {
     background-color: #f8b7bd;
   }
   .colorRosaPastel{
-    color: #0d01f0 !important;
+    color: #308a50 !important;
   }
   .bgBotonRosa{
     background-color: #875753 !important;
