--- a/css/estilos.css
+++ b/css/estilos.css
@@ -69,7 +69,65 @@ body {
     /* rtl:remove */
     letter-spacing: -.05rem;
   }
-  
+
+/* Estilo del contenedor del mensaje */
+.message {
+  background-color: #ff9800; /* Naranja Tiki */
+  color: white;
+  padding: 20px;
+  text-align: center;
+  font-size: 18px;
+  font-family: 'Arial', sans-serif;
+  border-radius: 10px;
+  position: fixed;
+  top: 20%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  z-index: 9999;
+  display: none; /* Inicia oculto */
+}
+
+.message2 {
+  background-color: #4caf50; /* Verde */
+  color: white;
+}
+
+/* Animación de aparición */
+.fadeIn {
+  animation: fadeIn 1s forwards;
+}
+
+@keyframes fadeIn {
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
+}
+
+/* Estilo del botón */
+button {
+  background-color: white;
+  color: #ff9800;
+  font-size: 16px;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #ffcc80;
+}
+
+
+
+
+
   
   /* RESPONSIVE CSS
   -------------------------------------------------- */
